force-app/main/default/objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>**Required** The event end date.</description>
    <inlineHelpText>**Required** The event end date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>