force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of Event</description>
    <inlineHelpText>The Type of Event</inlineHelpText>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>