force-app/main/default/objects/Event__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Event is available for Sale and for publishing too registration pages. Defaults checked.</description>
    <inlineHelpText>When checked, the Event is available for Sale and for publishing the registration pages. Defaults checked.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>