force-app/main/default/objects/Event__c/fields/Minutes_Spent__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Spent__c</fullName>
    <description>Minutes spent on the Event.</description>
    <inlineHelpText>Minutes spent on the Event.</inlineHelpText>
    <label>Minutes Spent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>